build: change npm registry & package name

--- a/packages/s2-core/package.json
+++ b/packages/s2-core/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "@antv/s2",
+  "name": "@bpm/s2",
   "version": "1.44.0",
   "main": "lib/index.js",
   "unpkg": "dist/index.min.js",
