--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clean:lock-file": "rm -rf yarn.lock",
     "core:start": "yarn workspace @antv/s2 start",
     "core:watch": " yarn workspace @antv/s2 watch",
-    "core:build": "yarn workspace @antv/s2 build",
+    "core:build": "yarn workspace @bpm/s2 build",
     "core:test": "yarn workspace @antv/s2 test",
     "core:sync-event": "yarn workspace @antv/s2 sync-event",
     "react:start": "yarn workspace @antv/s2-react test:live",
