--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@antv/s2",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/s2-core"
   ],
   "keywords": [
     "antv",
