--- a/packages/s2-core/package.json
+++ b/packages/s2-core/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@bpm/s2",
-  "version": "1.45.1",
+  "version": "1.45.2-alpha.0",
   "main": "lib/index.js",
   "unpkg": "dist/index.min.js",
   "module": "esm/index.js",
